// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiColorPaletteDisplay is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(31, 176, 178); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 219, 109); width: 20%;"
    />
    <span
      style="background-color: rgb(238, 145, 145); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 255, 255); width: 20%;"
    />
    <span
      style="background-color: rgb(136, 128, 148); width: 20%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props HTML attributes accepts span attributes 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
  id="id"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    title
  </span>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(31, 176, 178); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 219, 109); width: 20%;"
    />
    <span
      style="background-color: rgb(238, 145, 145); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 255, 255); width: 20%;"
    />
    <span
      style="background-color: rgb(136, 128, 148); width: 20%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props size m is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeMedium"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(31, 176, 178); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 219, 109); width: 20%;"
    />
    <span
      style="background-color: rgb(238, 145, 145); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 255, 255); width: 20%;"
    />
    <span
      style="background-color: rgb(136, 128, 148); width: 20%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props size s is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(31, 176, 178); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 219, 109); width: 20%;"
    />
    <span
      style="background-color: rgb(238, 145, 145); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 255, 255); width: 20%;"
    />
    <span
      style="background-color: rgb(136, 128, 148); width: 20%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props size xs is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeExtraSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(31, 176, 178); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 219, 109); width: 20%;"
    />
    <span
      style="background-color: rgb(238, 145, 145); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 255, 255); width: 20%;"
    />
    <span
      style="background-color: rgb(136, 128, 148); width: 20%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type fixed and palette with stops 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(84, 179, 153); width: 21%;"
    />
    <span
      style="background-color: rgb(211, 96, 134); width: 32%;"
    />
    <span
      style="background-color: rgb(145, 112, 184); width: 21%;"
    />
    <span
      style="background-color: rgb(245, 167, 0); width: 26%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type fixed and palette without stops 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color: rgb(31, 176, 178); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 219, 109); width: 20%;"
    />
    <span
      style="background-color: rgb(238, 145, 145); width: 20%;"
    />
    <span
      style="background-color: rgb(255, 255, 255); width: 20%;"
    />
    <span
      style="background-color: rgb(136, 128, 148); width: 20%;"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type gradient and palette with stops 1`] = `
<span
  aria-hidden="true"
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
/>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type gradient and palette without stops 1`] = `
<span
  aria-hidden="true"
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 emotion-euiTestCss euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
/>
`;
